--- a/GKarkanoid/GKarkanoid/GKarkanoid.vcxproj
+++ b/GKarkanoid/GKarkanoid/GKarkanoid.vcxproj
@@ -129,6 +129,7 @@
     <ClCompile Include="block.cpp" />
     <ClCompile Include="board.cpp" />
     <ClCompile Include="interf.cpp" />
+    <ClCompile Include="powerup.cpp" />
     <ClCompile Include="progbar.cpp" />
     <ClCompile Include="source.cpp" />
   </ItemGroup>
@@ -137,6 +138,7 @@
     <ClInclude Include="block.h" />
     <ClInclude Include="board.h" />
     <ClInclude Include="interf.h" />
+    <ClInclude Include="powerup.h" />
     <ClInclude Include="progbar.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
